--- a/TurbidCurrentMain/Packages/manifest.json
+++ b/TurbidCurrentMain/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.addressables": "1.16.19",
     "com.unity.collab-proxy": "1.7.1",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
