--- a/TurbidCurrentMain/Assembly-CSharp.csproj
+++ b/TurbidCurrentMain/Assembly-CSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,7 +53,17 @@
     <UnityVersion>2021.1.16f1c1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\MainProject\Scripts\Test.cs" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio Tools for Unity\16.0\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Assets\MainProject\Scripts\Other\GameHelper.cs" />
+    <Compile Include="Assets\MainProject\Scripts\UI\Test.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\MainProject\Scripts\Config\Define\DefineFolderReadMe.txt" />
+    <None Include="Assets\MainProject\Scripts\Config\LuaScripts\LuaFolderReadMe.txt" />
+    <None Include="Assets\MainProject\Config\Asset\Asset.txt" />
+    <None Include="Assets\MainProject\Config\Tbl\Tbl.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
