--- a/TurbidCurrentMain/Packages/manifest.json
+++ b/TurbidCurrentMain/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "1.16.19",
     "com.unity.collab-proxy": "1.7.1",
-    "com.unity.ide.visualstudio": "2.0.12",
+    "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.test-framework": "1.1.27",
     "com.unity.textmeshpro": "3.0.6",
